[package]
name = "minimal_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lightyear = { path = "../../lightyear", features = ["webtransport"] }
bevy = { version = "0.13", features = ["bevy_core_pipeline"] }
bevy_async_task = "0.1.1"
serde = { version = "1.0.188", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
